--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   http: ^1.2.2
   get_storage: ^2.1.1
   smooth_page_indicator: ^1.2.0+3
+  pin_code_fields: ^8.0.1
 
 dev_dependencies:
   flutter_test:
