--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   get_storage: ^2.1.1
   smooth_page_indicator: ^1.2.0+3
   pin_code_fields: ^8.0.1
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
@@ -89,7 +90,7 @@ flutter:
   fonts:
     - family: Nunito
       fonts:
-        - asset: assets/fonts/Nunito-VariableFont_wght.ttf
+        - asset: assets/fonts/Nunito-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
